# chad-eline.github.io

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  Makefile  cv.md  index.html  mkdocs.yml  pyproject.toml  readme.md  sitemap.xml
.github/: copilot-instructions.md  dependabot.yml  pull-request-template.md
.github/workflows/: ci.yml  release.yml
about/: index.html
assets/Resume/: index.html
assets/stylesheets/: extra.css
docs/: about.md  design.md  index.md  quickstart.md  testing.md
docs/assets/: Resume.md
docs/assets/stylesheets/: extra.css
docs/blog/: index.md
docs/projects/: index.md
projects/: index.html
search/: search_index.json
src/python_template/: __init__.py  main.py
tests/: test_main.py
