[project]
name = "chad-eline-portfolio"
version = "1.0.0"
description = "Chad Eline's portfolio and personal website."
readme = "readme.md"
requires-python = ">=3.10"
authors = [
    {name = "Chad Eline"}
]
license = {text = "MIT"}
keywords = ["portfolio", "website", "mkdocs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.urls]
Homepage = "https://chad-eline.github.io"
Repository = "https://github.com/chad-eline/chad-eline.github.io.git"
Issues = "https://github.com/chad-eline/chad-eline.github.io/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.0",
    "mkdocs-get-deps>=0.2.0",
    "ghp-import>=2.1.0",
    "markdown>=3.10",
    "pyyaml-env-tag>=1.1",
    "watchdog>=6.0.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []
